syntax = "proto3";

package randomPackage;

service Random {
    rpc PingPong (PingRequest) returns (PongResponse);
}

message PingRequest {
    string message = 1;
}

message PongResponse {
    string message = 1;
}